Update Python-Scripts y Ejemplos.ipynb
CalculodeDecadasEjm

--- a/Curso 1 - Estadistica descritiva con Python y Rstudio/Python-Scripts y Ejemplos.ipynb
+++ b/Curso 1 - Estadistica descritiva con Python y Rstudio/Python-Scripts y Ejemplos.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Saber versión de python\n",
+    "import sys\n",
+    "print(sys.version)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -352,6 +363,19 @@
    "outputs": [],
    "source": [
     "math.isclose(math.sqrt(2)**2, 2) #Da como resultado si el valor esta suficientemene cerca del otro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculo simple de decadas\n",
+    "(1969//10)*10 #Da como resultado decada de 1960, eso es devido a que cuando hace \n",
+    "              # Paso 1: 1969//10 = El resultado es el resto de la división numerica que es 196\n",
+    "              # Paso 2: 196 * 10 = 1960, Ese resultado es para determinar decadas de un año ou variables\n",
+    "              # donde el interes son los 3 primeros digitos"
    ]
   },
   {
